Fixes layout issues with LogoBin component

--- a/src/components/logo-bin/LogoBin.css
+++ b/src/components/logo-bin/LogoBin.css
@@ -5,7 +5,7 @@
 }
 
 .logo {
-    height: 40px;
-    padding: 8px;
+    max-height: 40px;
+    margin: 8px;
     visibility: hidden;
 }
